Project ENDED SUCCESFUL

--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
         <title>Soft Body Simulate in JS, Hubert Topolski</title>
         <meta charset="UTF-8">
         <meta name="description" content="Simple code for simulating soft bodies, created for educational purposes. The code simulates a pressure model using the Verlet integration method">
+
+        <style>
+            body {
+                background-color: #666666;
+                color: #ffffff;
+                text-align: center;
+            }
+            #canvas{
+                background-color: white;
+                border: 5px solid #ffffff;
+                margin: 2px auto;
+                display: block;
+                padding-top: 2%;
+                margin-top: 2%;
+            }
+        </style>
     </head>
 
     <body>
+        <h1>Soft Body Simulation in JS</h1>
+        <p>Author: Hubert Topolski</p>
+
+        <p>using book "Symulacje komputerowe w fizyce"</p>
+
+
+
         <!------ canvas for drawning-->
         <canvas id="canvas" width="800" height="600"></canvas>
 
